--- a/1.html
+++ b/1.html
@@ -48,7 +48,7 @@ body {
 }
 
 .title-button:hover {
-    background-color: #0056b3;
+    background-color: #0c420200;
 }
 
 .book-info {
@@ -60,8 +60,8 @@ body {
 <body>
     <div class="container">
         <img src="1.png" alt="غلاف الكتاب" class="book-cover">
-        <button class="title-button" onclick="redirectToLink()">عنوان الكتاب</button>
-        <p class="book-info">معلومات حول الكتاب: هذا الكتاب يتناول موضوعات تعليمية هامة...</p>
+        <button class="title-button" onclick="redirectToLink()">قلقيلية/فلسطين</button>
+        <p class="book-info">أهلاً ومرحباً بكم</p>
     </div>
     <script>function redirectToLink() {
         window.location.href = "https://safa2qtp.web.app/";
