--- a/1.html
+++ b/1.html
@@ -39,8 +39,8 @@ body {
     display: inline-block;
     padding: 10px 20px;
     font-size: 20px;
-    color: #fff;
-    background-color: #007bff;
+    color: #000000;
+    background-color: #01552e;
     border: none;
     border-radius: 5px;
     cursor: pointer;
