--- a/1.html
+++ b/1.html
@@ -39,7 +39,7 @@ body {
     display: inline-block;
     padding: 10px 20px;
     font-size: 20px;
-    color: #000000;
+    color: #ffffff;
     background-color: #01552e;
     border: none;
     border-radius: 5px;
@@ -48,7 +48,7 @@ body {
 }
 
 .title-button:hover {
-    background-color: #0c420200;
+    background-color: #00000000;
 }
 
 .book-info {
